# insurance-drn

./: README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: drn_demo.py  run_tests.py
src/insurance_drn/: __init__.py  diagnostics.py  drn.py  histogram.py
tests/: conftest.py  test_baseline.py  test_cutpoints.py  test_diagnostics.py  test_drn.py  test_histogram.py  test_loss.py  test_network.py
