[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-drn"
version = "0.1.0"
description = "Distributional Refinement Network for insurance pricing — full predictive distributions by refining GLM/GBM baselines with a neural network"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = [
    "insurance",
    "pricing",
    "actuarial",
    "distributional-forecasting",
    "neural-network",
    "glm",
    "gamma",
    "solvency-ii",
    "scr",
    "histogram",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "polars>=0.20.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
glm = [
    "statsmodels>=0.14.5",
]
catboost = [
    "catboost>=1.2.0",
]
plots = [
    "matplotlib>=3.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "statsmodels>=0.14.5",
    "matplotlib>=3.7.0",
]
all = [
    "statsmodels>=0.14.5",
    "catboost>=1.2.0",
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/burningcost/insurance-drn"
Repository = "https://github.com/burningcost/insurance-drn"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_drn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
